--- a/bluecollar/src/main/res/layout/fragment_make_friends.xml
+++ b/bluecollar/src/main/res/layout/fragment_make_friends.xml
@@ -20,7 +20,7 @@
             android:layout_weight="1"
             android:button="@null"
             android:gravity="center"
-            android:text="附近的人"
+            android:text="最新动态"
             android:textSize="@dimen/text_default"
             android:textColor="@drawable/tabbar_text"
             android:background="@drawable/tabbar_bg"/>
