--- a/common/src/main/res/drawable/readstatus.xml
+++ b/common/src/main/res/drawable/readstatus.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_selected="true" android:drawable="@drawable/readstatus_read"/>
-    <item android:drawable="@drawable/readstatus_unread"/>
+    <item android:state_selected="true" android:drawable="@drawable/border_blue"/>
+    <item android:drawable="@drawable/border_grey"/>
 </selector>
