--- a/applyjobs/src/main/res/layout/activity_jobnews_details.xml
+++ b/applyjobs/src/main/res/layout/activity_jobnews_details.xml
@@ -7,23 +7,35 @@
 
     <include layout="@layout/actionbar" />
 
-    <TextView
-        android:id="@+id/tv_details_title"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/padding_default"
-        android:gravity="center"
-        android:textColor="@color/main_color"
-        android:textSize="@dimen/text_large" />
+        android:scrollbars="none">
 
-    <TextView
-        android:id="@+id/tv_details_content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/padding_default"
-        android:layout_marginRight="@dimen/padding_default"
-        android:textColor="@color/main_color"
-        android:textSize="@dimen/text_default" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_details_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/padding_default"
+                android:gravity="center"
+                android:textColor="@color/main_color"
+                android:textSize="@dimen/text_large" />
+
+            <TextView
+                android:id="@+id/tv_details_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/padding_default"
+                android:layout_marginRight="@dimen/padding_default"
+                android:textColor="@color/main_color"
+                android:textSize="@dimen/text_default" />
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
