--- a/applyjobs/src/main/res/layout/fragment_trainclass.xml
+++ b/applyjobs/src/main/res/layout/fragment_trainclass.xml
@@ -24,7 +24,7 @@
             android:paddingTop="@dimen/padding_small"
             android:text="预约"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_large" />
+            android:textSize="@dimen/text_default" />
 
         <Button
             android:id="@+id/btn_message"
@@ -37,7 +37,7 @@
             android:paddingTop="@dimen/padding_small"
             android:text="咨询"
             android:textColor="@color/white"
-            android:textSize="@dimen/text_large" />
+            android:textSize="@dimen/text_default" />
     </LinearLayout>
 
     <RelativeLayout
